# avs-mlrt

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_ncnn.md  README_ov.md  mlrt.avsi
common/: convert_float_to_float16.cpp  onnx_utils.cpp
mlrt_ncnn/: CHANGELOG.md  CMakeLists.txt  README.md
mlrt_ncnn/src/: mlrt_ncnn.cpp  mlrt_ncnn.rc  onnx2ncnn.cpp  onnx2ncnn.h
mlrt_ort/: CHANGELOG.md  CMakeLists.txt  README.md
mlrt_ort/src/: mlrt_ort.cpp  mlrt_ort.rc
mlrt_ov/: CHANGELOG.md  CMakeLists.txt  README.md
mlrt_ov/src/: mlrt_ov.cpp  mlrt_ov.rc
msvc/: avs-mlrt.sln  avs-mlrt.vcxproj  avs-mlrt.vcxproj.filters  avs_mlrt.sln  avs_mlrt.vcxproj
msvc/mlrt_ncnn/: mlrt_ncnn.sln  mlrt_ncnn.vcxproj  mlrt_ncnn.vcxproj.filters
msvc/mlrt_ov/: mlrt_ov.sln  mlrt_ov.vcxproj  mlrt_ov.vcxproj.filters
msvc_ncnn/: avs_mlrt_ncnn.sln  avs_mlrt_ncnn.vcxproj  mlrt_ncnn.vcxproj
scripts/: mlrt_CUGAN.avsi  mlrt_DPIR.avsi  mlrt_RIFE.avsi  mlrt_RealESRGAN.avsi  mlrt_SAFA.avsi  mlrt_W2x.avsi  mlrt_common.avsi
src/common/: onnx_utils.cpp
src/ncnn/: mlrt_ncnn.cpp  mlrt_ncnn.rc
src/ov/: mlrt_ov.cpp
